--- a/_includes/sosero/footer.html
+++ b/_includes/sosero/footer.html
@@ -13,7 +13,7 @@
 
 
 
-   $('.regular').slick({
+$('.regular').slick({
   dots: true,
   infinite: false,
   speed: 300,
@@ -48,13 +48,31 @@
     // instead of a settings object
   ]
 });
-$('.regular2').slick({
-dots: true,
-infinite: false,
-speed: 300,
-slidesToShow: 1,
-slidesToScroll: 1
-});
+  $('.regular2').slick({
+  dots: true,
+  infinite: false,
+  speed: 300,
+  slidesToShow: 1,
+  slidesToScroll: 1
+  });
 
-   });
+  $('.regularx2').slick({
+  dots: true,
+  infinite: false,
+  speed: 300,
+  slidesToShow: 2,
+  slidesToScroll: 2,
+  responsive: [
+    {
+      breakpoint: 992,
+      settings: {
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        infinite: true,
+        dots: true
+      }
+    }]
+  });
+
+  });
 </script>
