--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -11,7 +11,7 @@
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         {% include sosero/hamburger-capraz.html %}
       </header>
-      <div data-gnl="23 24p soldan-1 24p-aralık ortada">
+      <div data-gnl="23 24p ortada" style="padding: 0 20px;">
         <div data-gnl="1 1p dürmeden" style="margin-left:-40px;">
           {{ content }}
         </div>
