--- a/_layouts/sosero/haberler.html
+++ b/_layouts/sosero/haberler.html
@@ -12,7 +12,11 @@
         <h1 class="product-name" data-gnl="0" data-ort="1 3p üstte-ol küçükleri-gizle" style="margin-left: 40px;">HABERLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
-      {{ content }}
+      <div data-gnl="23 24p ortada göbekte" style="min-height:70vh; padding:0 20px;">
+
+          {{ content }}
+
+      </div>
     </div>
     <footer data-gnl="0">
       {% include sosero/footer.html %}
