--- a/_layouts/sosero/haber.html
+++ b/_layouts/sosero/haber.html
@@ -6,8 +6,8 @@
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-byk="sığdır">
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc ortada sığdır" data-byk="kaymadan">
-      <header data-gnl="23 24p soldan-1 24p-aralık üstte" data-byk="1 1p" style="margin-bottom:30px;">
+    <div class="main" data-gnl="1g 1nc ortada üstte sığdır" data-byk="kaymadan">
+      <header data-gnl="23 24p üstte" style="margin-bottom:30px;">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <h1 class="product-name" data-gnl="1 3p üstte-ol">HABERLER</h1>
         {% include sosero/hamburger-capraz.html %}
