--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -11,8 +11,8 @@
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         {% include sosero/hamburger-capraz.html %}
       </header>
-      <div data-gnl="23 24p ortada" style="padding: 0 20px;">
-        <div data-gnl="1 1p dürmeden" style="margin-left:-40px;">
+      <div data-gnl="23 24p ortada">
+        <div data-gnl="1 1p dürmeden">
           {{ content }}
         </div>
       </div>
