--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -6,7 +6,7 @@
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-kçk="sığdır">
     {% include sosero/menu.html %}
-    <div class="main paketler" data-gnl="1g 1nc ortada sığdır">
+    <div class="main paketler" data-gnl="1g 1nc sütun dürmeden sığdır" style="align-items:center;">
       <header data-gnl="23 24p üstte">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         {% include sosero/hamburger-capraz.html %}
