--- a/_layouts/sosero/urun.html
+++ b/_layouts/sosero/urun.html
@@ -6,10 +6,10 @@
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-byk="sığdır">
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc üstte ortada sığdır" data-byk="kaymadan">
-      <header data-gnl="23 24p" data-byk="1 1p" style="margin-bottom:30px;">
+    <div class="main" data-gnl="1g 1nc sütun dürmeden sığdır" style="align-items:center;">
+      <header data-gnl="23 24p üstte">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
-        <h1 class="product-name" data-gnl="1 3p üstte-ol">ÜRÜNLER</h1>
+        <h1 class="product-name" data-ort="1 3p üstte-ol küçükleri-gizle">ÜRÜNLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
       {{ content }}
