--- a/_layouts/sosero/haber.html
+++ b/_layouts/sosero/haber.html
@@ -9,7 +9,7 @@
     <div class="main" data-gnl="1g 1nc ortada üstte sığdır" data-byk="kaymadan">
       <header data-gnl="23 24p üstte" style="margin-bottom:30px;">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
-        <h1 class="product-name" data-gnl="1 3p üstte-ol">HABERLER</h1>
+        <h1 class="product-name" data-ort="1 3p üstte-ol küçükleri-gizle">HABERLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
       {{ content }}
