--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -9,10 +9,11 @@
     <div class="main paketler" data-gnl="1g 1nc sütun dürmeden sığdır" style="align-items:center;">
       <header data-gnl="23 24p üstte">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+        <h1 class="product-name" data-ort="1 3p üstte-ol küçükleri-gizle">PAKETLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
       <div data-gnl="23 24p ortada">
-        <div data-gnl="1 1p dürmeden">
+        <div data-gnl="1 1p dürmeden" style="height: 100%;overflow: hidden;">
           {{ content }}
         </div>
       </div>
