--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -9,7 +9,7 @@
     <div class="main" data-gnl="1g 1nc sütun dürmeden sığdır" style="align-items:center;">
       <header data-gnl="23 24p üstte">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
-        <h1 class="product-name" data-gnl="1 3p üstte-ol" data-ort="küçükleri-gizle" style="margin-left:40px;">ÜRÜNLER</h1>
+        <h1 class="product-name" data-ort="1 3p üstte-ol küçükleri-gizle">ÜRÜNLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
       <div data-gnl="23 24p ortada">
