--- a/_layouts/sosero/haber.html
+++ b/_layouts/sosero/haber.html
@@ -6,17 +6,13 @@
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-byk="sığdır">
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc ortada üstte sığdır" data-byk="kaymadan">
-      <header data-gnl="23 24p üstte" style="margin-bottom:30px;">
-        <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+    <div class="main" data-gnl="1g 1nc sütun dürmeden sığdır" style="align-items:center;">
+      <header data-gnl="23 24p üstte">
         <h1 class="product-name" data-ort="1 3p üstte-ol küçükleri-gizle">HABERLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
       {{ content }}
     </div>
-    <footer data-gnl="0">
-      {% include sosero/footer.html %}
-    </footer>
   </div>
 </body>
 </html>
