--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -6,8 +6,8 @@
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-byk="sığdır">
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc sütun dürmeden sığdır" style="align-items:center;">
-      <header data-gnl="23 24p üstte">
+    <div class="main" data-gnl="1g 1nc ortada sığdır">
+      <header data-gnl="23 24p üstte-ol">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <h1 class="product-name" data-ort="1 3p üstte-ol küçükleri-gizle">ÜRÜNLER</h1>
         {% include sosero/hamburger-capraz.html %}
