--- a/_layouts/sosero/haberler.html
+++ b/_layouts/sosero/haberler.html
@@ -7,7 +7,7 @@
   <div data-gnl="1 1p" data-byk="sığdır">
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc ortada sığdır" data-byk="kaymadan">
-      <header data-gnl="23 24p üstte" style="margin-bottom:30px;">
+      <header data-gnl="23 24p üstte-ol" style="margin-bottom:30px;">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <h1 class="product-name" data-ort="1 3p üstte-ol küçükleri-gizle">HABERLER</h1>
         {% include sosero/hamburger-capraz.html %}
