--- a/_includes/sosero/menu.html
+++ b/_includes/sosero/menu.html
@@ -12,14 +12,29 @@
           <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
         </label>
       </li>
-      <li><a href="urunler.html"><img src="/temalar/sosero/assets/img/menu/urunler.svg" alt=""><span>Ürünler</span></a></li>
-      <li><a href="tarifler.html"><img src="/temalar/sosero/assets/img/menu/yemektarifleri.svg" alt=""><span>Yemek Tarifleri</span></a></li>
-      <li><a href="tesisler.html"><img src="/temalar/sosero/assets/img/menu/uretimtesisleri.svg" alt=""><span>Üretim Tesisleri</span></a></li>
-      <li><a href="katalog.html"><img src="/temalar/sosero/assets/img/menu/katalog.svg" alt=""><span>Katalog</span></a></li>
-      <li><a href="satisnoktalari.html"><img src="/temalar/sosero/assets/img/menu/satisnoktalari.svg" alt=""><span>Satış Noktaları</span></a></li>
-      <li><a href="haberler.html"><img src="/temalar/sosero/assets/img/menu/haberler.svg" alt=""><span>Haberler</span></a></li>
-      <li><a href="hakkimizda.html"><img src="/temalar/sosero/assets/img/menu/hakkimizda.svg" alt=""><span>Hakkımızda</span></a></li>
-      <li><a href="iletisim.html"><img src="/temalar/sosero/assets/img/menu/iletisim.svg" alt=""><span>İletişim</span></a></li>
+      <li>
+        <a href="urunler.html"><i class="simge-urunler"></i><span>Ürünler</span></a>
+      </li>
+      <li>
+        <a href="tarifler.html"><i class="simge-yemek-tarifleri"></i><span>Yemek Tarifleri</span></a>
+      </li>
+      <li>
+        <a href="tesisler.html"><i class="simge-uretim-tesisleri"></i><span>Üretim Tesisleri</span></a>
+      </li>
+      <li>
+        <a href="katalog.html"><i class="simge-katalog"></i><span>Katalog</span></a>
+      </li>
+      <li>
+        <a href="satisnoktalari.html"><i class="simge-satis-noktalari"></i><span>Satış Noktaları</span></a></li>
+      <li>
+        <a href="haberler.html"><i class="simge-haberler"></i><span>Haberler</span></a>
+      </li>
+      <li>
+        <a href="hakkimizda.html"><i class="simge-hakkimizda"></i><span>Hakkımızda</span></a>
+      </li>
+      <li>
+        <a href="iletisim.html"><i class="simge-iletisim"></i><span>İletişim</span></a>
+      </li>
     </ul>
   </nav>
 </div>
