--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -1,3 +1,86 @@
+/* SİMGELER BAŞI */
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?jcfovk');
+  src:  url('fonts/icomoon.eot?jcfovk#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?jcfovk') format('truetype'),
+    url('fonts/icomoon.woff?jcfovk') format('woff'),
+    url('fonts/icomoon.svg?jcfovk#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="simge-"], [class*=" simge-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.simge-ok-alt:before {
+  content: "\e90c";
+  color: #fff;
+}
+.simge-haberler:before {
+  content: "\e900";
+  color: #fff;
+}
+.simge-hakkimizda:before {
+  content: "\e901";
+  color: #fff;
+}
+.simge-hamburger:before {
+  content: "\e902";
+  color: #fff;
+}
+.simge-hamburger-x:before {
+  content: "\e903";
+  color: #fff;
+}
+.simge-iletisim:before {
+  content: "\e904";
+  color: #fff;
+}
+.simge-katalog:before {
+  content: "\e905";
+  color: #fff;
+}
+.simge-ok:before {
+  content: "\e906";
+  color: #fff;
+}
+.simge-ok-sol:before {
+  content: "\e907";
+  color: #fff;
+}
+.simge-satis-noktalari:before {
+  content: "\e908";
+  color: #fff;
+}
+.simge-uretim-tesisleri:before {
+  content: "\e909";
+  color: #fff;
+}
+.simge-urunler:before {
+  content: "\e90a";
+  color: #fff;
+}
+.simge-yemek-tarifleri:before {
+  content: "\e90b";
+  color: #fff;
+}
+
+/* SİMGELER SONU */
+
+
 .main-menu{
   background-color: #000;
   color:#fff;
@@ -45,6 +128,9 @@ footer{
   padding:15px;
   display:flex;
   justify-content: center;
+}
+[data-menü~="sağ-kaval"] li a i::before{
+  font-size: 30px;
 }
 [data-menü~="sağ-kaval"] > li a span{
   display:none;
@@ -133,10 +219,7 @@ label[for*="menü-ana"]{
   align-items: center;
   justify-content: left;
 }
-[data-menü~="sağ-kaval"] li a img{
-  width:30px;
-  height: 38px;
-}
+
 [data-menü~="sağ-kaval"] li label[for*="-çapraz"]{
 flex: 0 0 auto;
 margin-right: 17px;
@@ -670,7 +753,16 @@ margin-bottom: 15px;
 
     opacity: .75;
     color: white;
+    
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
 
+    /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -686,11 +778,11 @@ margin-bottom: 15px;
 }
 .slick-prev:before
 {
-    content: '◁';
+    content: "\e907";
 }
 [dir='rtl'] .slick-prev:before
 {
-    content: '◁';
+    content: "\e907";
 }
 
 .slick-next
@@ -704,11 +796,11 @@ margin-bottom: 15px;
 }
 .slick-next:before
 {
-    content: '▷';
+    content: "\e906";
 }
 [dir='rtl'] .slick-next:before
 {
-    content: '▷';
+    content: "\e907";
 }
 
 /* Dots */
