--- a/_includes/sosero/footer.html
+++ b/_includes/sosero/footer.html
@@ -21,6 +21,15 @@ $('.regular').slick({
   slidesToScroll: 5,
   responsive: [
     {
+      breakpoint: 1600,
+      settings: {
+        slidesToShow: 4,
+        slidesToScroll: 4,
+        infinite: true,
+        dots: true
+      }
+    },
+    {
       breakpoint: 1024,
       settings: {
         slidesToShow: 3,
