--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -3,7 +3,7 @@
 <head>
 {% include sosero/head.html %}
 </head>
-<body data-gnl="sütun sığdır">
+<body class="ap-yok" data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-kçk="sığdır">
     {% include sosero/menu.html %}
     <div class="main paketler" data-gnl="1g 1nc ortada sığdır">
