--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -81,6 +81,26 @@
 /* SİMGELER SONU */
 
 
+@keyframes move {
+
+	25% {
+		background-position:-15% 19%, 9% 124%, 79% -35%, 34% -12%, 94% 99%, -39% 16%, -2% 69%, 139% 11%, 31% -119%, 106% 29%;
+	}
+
+	50% {
+		background-position:-15% 20%, 9% 125%, 79% -35%, 35% -12%, 96% 99%, -39% 15%, -3% 69%, 139% 10%, 30% -121%, 108% 31%;
+	}
+
+	75% {
+		background-position:-15% 21%, 10% 124%, 80% -35%, 36% -11%, 94% 101%, -39% 16%, -1% 70%, 137% 9%, 31% -120%, 106% 31%;
+	}
+
+}
+
+
+
+
+
 .main-menu{
   background-color: #000;
   color:#fff;
@@ -89,28 +109,43 @@
 
 }
 .paketler{
-  background: url('/temalar/sosero/assets/img/arkaplan.png') no-repeat center center fixed;
-  background-size: auto auto;
-  background-size: auto auto, auto auto;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url('/temalar/sosero/assets/img/arkaplan-a.png') no-repeat top, url('/temalar/sosero/assets/img/arkaplan-b.png') no-repeat right bottom, url('/temalar/sosero/assets/img/arkaplan-c.png') no-repeat bottom, url('/temalar/sosero/assets/img/arkaplan-d.png') no-repeat left;
+  -webkit-background-size:  auto, auto, auto, auto;
+  -moz-background-size: auto, auto, auto, auto;
+  -o-background-size: auto, auto, auto, auto;
+  background-size: auto, auto, auto, auto;
   background-color: rgba(55,138,0,.8);
 }
 .gelgit-etkin{
   overflow: hidden;
 }
-html:not(.intro){
+html:not(.intro) body{
   background-color: #ddd;
   /*background: url('/temalar/sosero/assets/img/arkaplan.png') no-repeat center center fixed,url('/temalar/sosero/assets/img/arkaplan0.png') no-repeat center center fixed;
   */
-  background: url('/temalar/sosero/assets/img/arkaplan-a.png') no-repeat top, url('/temalar/sosero/assets/img/arkaplan-b.png') no-repeat right bottom, url('/temalar/sosero/assets/img/arkaplan-c.png') no-repeat bottom, url('/temalar/sosero/assets/img/arkaplan-d.png') no-repeat left,url('/temalar/sosero/assets/img/arkaplan0.png') no-repeat center center fixed;
+  background: url('/temalar/sosero/assets/img/arkaplan/k1.png'), url('/temalar/sosero/assets/img/arkaplan/k2.png'), url('/temalar/sosero/assets/img/arkaplan/k3.png'), url('/temalar/sosero/assets/img/arkaplan/k4.png'), url('/temalar/sosero/assets/img/arkaplan/k5.png'), url('/temalar/sosero/assets/img/arkaplan/k6.png'), url('/temalar/sosero/assets/img/arkaplan/k7.png'), url('/temalar/sosero/assets/img/arkaplan/k8.png'), url('/temalar/sosero/assets/img/arkaplan/k9.png'), url('/temalar/sosero/assets/img/arkaplan/k0.png');
+  /*background: url('/temalar/sosero/assets/img/arkaplan-a.png') no-repeat top, url('/temalar/sosero/assets/img/arkaplan-b.png') no-repeat right bottom, url('/temalar/sosero/assets/img/arkaplan-c.png') no-repeat bottom, url('/temalar/sosero/assets/img/arkaplan-d.png') no-repeat left,url('/temalar/sosero/assets/img/arkaplan0.png') no-repeat center center fixed;
+  */
+  background-position:-16% 20%, 10% 125%, 80% -36%, 35% -13%, 95% 100%, -40% 15%, -3% 70%, 140% 10%, 30% -110%, 107% 30%;
+  background-repeat: no-repeat;
+  -webkit-background-size:  auto;
+  -moz-background-size: auto;
+  -o-background-size: auto;
+  background-size: auto;
+  -webkit-animation:  move 10s linear infinite;
+  -moz-animation:  move 10s linear infinite;
+  animation: move 10s linear infinite;
+}
+html:not(.intro) body.ap-yok{
+  background-color: #ddd;
+  /*background: url('/temalar/sosero/assets/img/arkaplan.png') no-repeat center center fixed,url('/temalar/sosero/assets/img/arkaplan0.png') no-repeat center center fixed;
+  */
+  background: url('/temalar/sosero/assets/img/arkaplan0.png') no-repeat center center fixed;
 
-  -webkit-background-size:  auto, auto, auto, auto, cover;
-  -moz-background-size: auto, auto, auto, auto, cover;
-  -o-background-size: auto, auto, auto, auto, cover;
-  background-size: auto, auto, auto, auto, cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 header, footer{
   padding:0 20px;
@@ -351,7 +386,7 @@ margin-bottom: 15px;
   background-size: cover;
 }
 .yemek-adi, .product-name{
-  padding-top:50px;
+  padding-top:66px;
   padding-left:10px;
   font-size:36px;
   line-height: 28px;
@@ -720,6 +755,7 @@ margin-bottom: 15px;
     color: transparent;
     border: none;
     outline: none;
+    margin-top:auto;
 }
 .slick-prev:hover,
 .slick-prev:focus,
@@ -753,7 +789,7 @@ margin-bottom: 15px;
 
     opacity: .75;
     color: white;
-    
+
     font-family: 'icomoon' !important;
     speak: none;
     font-style: normal;
