--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -84,15 +84,15 @@
 @keyframes move {
 
 	25% {
-		background-position:-15% 19%, 9% 124%, 79% -35%, 34% -12%, 94% 99%, -39% 16%, -2% 69%, 139% 11%, 31% -119%, 106% 29%;
+		background-position:-15% 19%, 9% 124%, 79% -35%, 34% -12%, 94% 99%, -39% 16%, -2% 69%, 103% 11%, 31% -119%, 106% 29%;
 	}
 
 	50% {
-		background-position:-15% 20%, 9% 125%, 79% -35%, 35% -12%, 96% 99%, -39% 15%, -3% 69%, 139% 10%, 30% -121%, 108% 31%;
+		background-position:-15% 20%, 9% 125%, 79% -35%, 35% -12%, 96% 99%, -39% 15%, -3% 69%, 103% 10%, 30% -121%, 108% 31%;
 	}
 
 	75% {
-		background-position:-15% 21%, 10% 124%, 80% -35%, 36% -11%, 94% 101%, -39% 16%, -1% 70%, 137% 9%, 31% -120%, 106% 31%;
+		background-position:-15% 21%, 10% 124%, 80% -35%, 36% -11%, 94% 101%, -39% 16%, -1% 70%, 104% 9%, 31% -120%, 106% 31%;
 	}
 
 }
@@ -123,10 +123,10 @@ html:not(.intro) body{
   background-color: #ddd;
   /*background: url('/temalar/sosero/assets/img/arkaplan.png') no-repeat center center fixed,url('/temalar/sosero/assets/img/arkaplan0.png') no-repeat center center fixed;
   */
-  background: url('/temalar/sosero/assets/img/arkaplan/k1.png'), url('/temalar/sosero/assets/img/arkaplan/k2.png'), url('/temalar/sosero/assets/img/arkaplan/k3.png'), url('/temalar/sosero/assets/img/arkaplan/k4.png'), url('/temalar/sosero/assets/img/arkaplan/k5.png'), url('/temalar/sosero/assets/img/arkaplan/k6.png'), url('/temalar/sosero/assets/img/arkaplan/k7.png'), url('/temalar/sosero/assets/img/arkaplan/k8.png'), url('/temalar/sosero/assets/img/arkaplan/k9.png'), url('/temalar/sosero/assets/img/arkaplan/k0.png');
+  background: url('/temalar/sosero/assets/img/arkaplan/k1.png'), url('/temalar/sosero/assets/img/arkaplan/k2.png'), url('/temalar/sosero/assets/img/arkaplan/k3.png'), url('/temalar/sosero/assets/img/arkaplan/k4.png'), url('/temalar/sosero/assets/img/arkaplan/k5.png'), url('/temalar/sosero/assets/img/arkaplan/k6.png'), url('/temalar/sosero/assets/img/arkaplan/k7.png'), url('/temalar/sosero/assets/img/arkaplan/k8.png'), url('/temalar/sosero/assets/img/arkaplan/k9.png'), url('/temalar/sosero/assets/img/arkaplan/k0.png'),url('/temalar/sosero/assets/img/arkaplan0.png') no-repeat center center cover fixed;
   /*background: url('/temalar/sosero/assets/img/arkaplan-a.png') no-repeat top, url('/temalar/sosero/assets/img/arkaplan-b.png') no-repeat right bottom, url('/temalar/sosero/assets/img/arkaplan-c.png') no-repeat bottom, url('/temalar/sosero/assets/img/arkaplan-d.png') no-repeat left,url('/temalar/sosero/assets/img/arkaplan0.png') no-repeat center center fixed;
   */
-  background-position:-16% 20%, 10% 125%, 80% -36%, 35% -13%, 95% 100%, -40% 15%, -3% 70%, 140% 10%, 30% -110%, 107% 30%;
+  background-position:-16% 20%, 10% 125%, 80% -36%, 35% -13%, 95% 100%, -40% 15%, -3% 70%, 101% 10%, 30% -110%, 107% 30%;
   background-repeat: no-repeat;
   -webkit-background-size:  auto;
   -moz-background-size: auto;
