--- a/temalar/ilker/assets/css/ilker.css
+++ b/temalar/ilker/assets/css/ilker.css
@@ -14,6 +14,8 @@ footer{
   padding-top:30px;
   padding-bottom:30px;
   border-top:2px solid #626dd4;
+  background:rgba(0, 0, 0, 0) url('/temalar/ilker/assets/img/geometry_@2X.png') repeat scroll 0% 0%;
+
 }
 
 
