--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -84,15 +84,15 @@
 @keyframes move {
 
 	25% {
-		background-position:-15% 19%, 9% 124%, 79% -35%, 34% -12%, 94% 99%, -39% 16%, -2% 69%, 103% 11%, 31% -119%, 106% 29%;
+		background-position:-15% 19%, 9% 124%, 79% -35%, 34% -12%, 94% 99%, -39% 16%, -2% 69%, 103% 11%, 31% -119%, 106% 29%,center;
 	}
 
 	50% {
-		background-position:-15% 20%, 9% 125%, 79% -35%, 35% -12%, 96% 99%, -39% 15%, -3% 69%, 103% 10%, 30% -121%, 108% 31%;
+		background-position:-15% 20%, 9% 125%, 79% -35%, 35% -12%, 96% 99%, -39% 15%, -3% 69%, 103% 10%, 30% -121%, 108% 31%,center;
 	}
 
 	75% {
-		background-position:-15% 21%, 10% 124%, 80% -35%, 36% -11%, 94% 101%, -39% 16%, -1% 70%, 104% 9%, 31% -120%, 106% 31%;
+		background-position:-15% 21%, 10% 124%, 80% -35%, 36% -11%, 94% 101%, -39% 16%, -1% 70%, 104% 9%, 31% -120%, 106% 31%,center;
 	}
 
 }
