--- a/temalar/ilker/assets/css/ilker.css
+++ b/temalar/ilker/assets/css/ilker.css
@@ -13,7 +13,7 @@
 footer{
   padding-top:30px;
   padding-bottom:30px;
-  border-top:2px solid #626dd4;
+  border-top: 1px solid #ddd;
   background:rgba(0, 0, 0, 0) url('/temalar/ilker/assets/img/geometry_@2X.png') repeat scroll 0% 0%;
 
 }
