--- a/_layouts/sosero/haber.html
+++ b/_layouts/sosero/haber.html
@@ -7,7 +7,7 @@
   <div data-gnl="1 1p" data-byk="sığdır">
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc sütun dürmeden sığdır" style="align-items:center;">
-      <header data-gnl="23 24p üstte">
+      <header data-gnl="23 24p üstte" style="flex-basis:auto">
         <h1 class="product-name" data-ort="1 3p üstte-ol küçükleri-gizle">HABERLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
