--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -358,8 +358,8 @@ margin-bottom: 15px;
   /*  0%{display:none;opacity: 0;}
     90%{display:none;opacity: 0;}
     100%{display:flex;opacity:1;} */
-    0%{margin-left:-1000px;}
-    50%{margin-left:30px;}
+    0%{margin-left:-1000px; opacity: 0;}
+    50%{margin-left:30px;opacity: 1;}
     100%{margin-left:0px;}
   }
 
