--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -147,6 +147,7 @@ footer{
 
 [data-menü~="sağ-kaval"]{
   z-index: 999;
+  overflow-x: hidden;
 }
 [data-menü~="sağ-kaval"] > li a{
   position: relative;
